samples/_failures_safe/1761562300_6d5aed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10db2ec1.c: In function ‘main’:
./samples/SAFE/__tmp_10db2ec1.c:171:9: error: expected declaration or statement at end of input
  171 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_10db2ec1.c:171:9: error: expected declaration or statement at end of input
